--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
   background-color: white;
 }
 
+.test {
+	align-content: center;
+	background: fixed;
+}
+
 .container {
   width: 1020px;
   margin: 0 auto;
