--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   font-family: "PT Sans", "Tahoma", sans-serif;
   font-size: 1.5em;
   line-height: 21px;
@@ -6,36 +6,42 @@ body{
   font-weight: normal;
   text-transform: uppercase;
 }
+
 img {
   max-width: 100%;
   height: auto;
 }
-header{
+
+header {
   margin: 80px 0;
 }
-.navbar-default .menu > li > a{
+
+.navbar-default .menu>li>a {
   padding: 20px 15px;
 }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus{
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
   box-shadow: 0 0 10px;
   border-radius: 5px;
   background-color: #fff;
 }
-.navbar-default .menu > li > a:hover{
+
+.navbar-default .menu>li>a:hover {
   box-shadow: 0 0 10px;
   border-radius: 5px;
   background-color: #fff;
   transition: all 300ms;
 }
-.navbar-default .menu > li > a:active{
+
+.navbar-default .menu>li>a:active {
   box-shadow: 0 0 5px;
 }
-.logo{
+
+.logo {
   margin-right: 50px;
 }
-.logo img{
+
+.logo img {
   position: relative;
   top: -21px;
   border: 1px solid #78ACC6;
@@ -43,7 +49,7 @@ header{
   box-shadow: 0 0 10px;
 }
 
-.dop-menu{
+.dop-menu {
   display: none;
   position: absolute;
   list-style: none;
@@ -56,76 +62,100 @@ header{
   bottom: -92px;
   z-index: 10;
 }
-.dop-menu li{
+
+.dop-menu li {
   padding: 3px 0;
 }
-.dop-menu li:not(:last-child){
+
+.dop-menu li:not(:last-child) {
   border-bottom: 1px solid #cccccc;
 }
-.dop-menu a{
-  color: #777;
+
+.dop-menu a {
+  color: #777777;
   text-transform: none;
 }
-.dop-menu a:hover{
+
+.dop-menu a:hover {
   text-decoration: none;
   color: #323232;
 }
-.open-menu:hover .dop-menu{
+
+.dop-menu .active-link{
+  color: #d6d6d6;
+}
+
+.dop-menu .active-link:hover{
+  color: #d6d6d6;
+}
+
+.open-menu:hover .dop-menu {
   display: block;
 }
-.glyphicon-chevron-down{
+
+.glyphicon-chevron-down {
   margin-left: 9px;
 }
-.icons i{
+
+.icons i {
   font-size: 2em;
 }
-.navbar-default .icons > li > a{
+
+.navbar-default .icons>li>a {
   color: #78ACFF;
 }
-.navbar-default .icons > li > a:hover{
+
+.navbar-default .icons>li>a:hover {
   color: #486799;
 }
-.navbar-default .icons > li > a:active,
-.navbar-default .icons > li > a:focus{
+
+.navbar-default .icons>li>a:active, .navbar-default .icons>li>a:focus {
   color: #a0f6d5;
 }
-.carousel-inner img{
+
+.carousel-inner img {
   margin: 0 auto;
 }
-.title-page,
-.carousel-header{
+
+.title-page, .carousel-header {
   padding: 23px 0;
   text-align: center;
   min-height: 80px;
   background: #78ACF3;
   background: rgba(120, 172, 248, .7);
 }
-.title-page h1,
-.carousel-header h1{
+
+.title-page h1, .carousel-header h1 {
   margin: 0;
   font-size: 2em;
   text-shadow: 0 1px 2px rgba(255, 255, 255, .6);
 }
-.theory-bottom{
+
+.theory-bottom {
   margin-bottom: 60px;
   text-transform: none;
 }
-.theory-bottom li:first-child{
+
+.theory-bottom li:first-child {
   list-style: none;
   font-weight: bold;
 }
-.theory{
+
+.theory {
   min-height: 500px;
 }
-.section-title{
+
+.section-title {
   text-align: center;
 }
-.name-section{
+
+.name-section {
   margin: 100px 0 40px;
   font-size: 3em;
   font-weight: 900;
 }
-.theory-top{
+
+.theory-top {
   width: 90%;
   margin: 70px auto;
   padding: 30px 20px;
@@ -136,38 +166,45 @@ header{
   border-radius: 20px;
   border: 2px solid #88f3cb;
 }
-.theory-p{
+
+.theory-p {
   padding-left: 30px;
   text-transform: none;
   border-left: 3px solid #78ACF3;
 }
-.theory-p a{
+
+.theory-p a {
   color: red;
   color: rgba(255, 0, 0, .6);
   font-weight: bold;
 }
-.row-theory img{
+
+.row-theory img {
   vertical-align: bottom;
 }
-.row-theory h4{
+
+.row-theory h4 {
   margin-bottom: 20px;
 }
-.row-theory .container a{
+
+.row-theory .container a {
   color: inherit;
   font-size: 1.5em;
 }
 
-.step{
+.step {
   min-height: 500px;
   position: relative;
   padding-bottom: 30px;
   width: 80%;
   margin: auto;
 }
-.step > .row{
+
+.step>.row {
   margin-top: 90px;
 }
-.ledder{
+
+.ledder {
   position: absolute;
   width: 4px;
   height: 85%;
@@ -175,30 +212,32 @@ header{
   left: 50%;
   margin-left: -2px;
   border-right: 4px solid #71c2e5;
-  }
-.gp-step{
+}
+
+.gp-step {
   border-bottom: 4px solid #71c2e5;
 }
-.gp-step-right{
+
+.gp-step-right {
   padding-left: 0;
   padding-right: 30px;
 }
-.gp-step-left{
+
+.gp-step-left {
   padding-right: 0;
   padding-left: 30px;
 }
-.gp-step-1,
-.gp-step-2,
-.gp-step-3{
+
+.gp-step-1, .gp-step-2, .gp-step-3 {
   transition: all .5s ease;
 }
-.gp-step-1:hover,
-.gp-step-2:hover,
-.gp-step-3:hover{
-    transform: translate(0,-25px);
-    border-bottom: 4px solid #a0f6d5;
-  }
-.step-number-img{
+
+.gp-step-1:hover, .gp-step-2:hover, .gp-step-3:hover {
+  transform: translate(0, -25px);
+  border-bottom: 4px solid #a0f6d5;
+}
+
+.step-number-img {
   position: absolute;
   bottom: -39px;
   right: -37px;
@@ -213,7 +252,8 @@ header{
   background-color: #71c2e5;
   transition: .5s ease;
 }
-.step-number-img-right{
+
+.step-number-img-right {
   position: absolute;
   bottom: -39px;
   left: -37px;
@@ -228,43 +268,48 @@ header{
   background-color: #71c2e5;
   transition: .5s ease;
 }
-.gp-step-1:hover .step-number-img,
-.gp-step-2:hover .step-number-img-right,
-.gp-step-3:hover .step-number-img{
+
+.gp-step-1:hover .step-number-img, .gp-step-2:hover .step-number-img-right, .gp-step-3:hover .step-number-img {
   background-color: #a0f6d5;
 }
-.gp-step p,
-.gp-step em{
+
+.gp-step p, .gp-step em {
   text-transform: none;
 }
 
-.assortment{
+.assortment {
   min-height: 500px;
 }
-.name-section a{
+
+.name-section a {
   color: inherit;
   text-decoration: none;
 }
-.card-assortment-title{
+
+.card-assortment-title {
   text-align: center;
 }
-.card-assortment-title h2{
+
+.card-assortment-title h2 {
   font-size: 1.5em;
   line-height: 1.7em;
 }
-.card-assortment-title h2 a{
+
+.card-assortment-title h2 a {
   color: inherit;
 }
+
 .assortment-img {
   margin: 0 auto;
   margin-top: 50px;
-	width: 340px;
-	height: 340px;
-	border-radius: 50%;
-	overflow: hidden;
+  width: 340px;
+  height: 340px;
+  border-radius: 50%;
+  overflow: hidden;
   border: 20px solid #78acf8;
-	border: 20px solid rgba(120, 172, 248, .7);
+  border: 20px solid rgba(120, 172, 248, .7);
 }
+
 
 /* добавление эффекта на  фото*/
 
@@ -273,7 +318,7 @@ header{
   z-index: 1;
   display: block;
   overflow: hidden;
-	border-radius: 50%;
+  border-radius: 50%;
 }
 
 .caption-link img {
@@ -285,71 +330,71 @@ header{
 .caption-link:hover img {
   transform: translateX(100%);
 }
-.assortment-img:hover{
-    box-shadow: 0 0 7px 3px rgba(0, 0, 0, .3);
+
+.assortment-img:hover {
+  box-shadow: 0 0 7px 3px rgba(0, 0, 0, .3);
 }
 
-.caption-link::before,
-.caption-link::after {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    text-align: center;
-    background: #333333;
-    background:
-      radial-gradient(black 15%, transparent 16%) 0 0,
-      radial-gradient(black 15%, transparent 16%) 8px 8px,
-      radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-      radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-      background-color:#333333;
-      background-size:16px 16px;
-    box-sizing: border-box;
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(-80px);
+.caption-link::before, .caption-link::after {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  text-align: center;
+  background: #333333;
+  background: radial-gradient(black 15%, transparent 16%) 0 0, radial-gradient(black 15%, transparent 16%) 8px 8px, radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px, radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
+  background-color: #333333;
+  background-size: 16px 16px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(-80px);
 }
 
 .caption-link::before {
-    content: attr(data-title);
-    height: 70%;
-    padding: 60px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: bold;
-    color: #ffffff;
+  content: attr(data-title);
+  height: 70%;
+  padding: 60px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: bold;
+  color: #ffffff;
 }
 
 .caption-link::after {
-    content: attr(data-description);
-    top: 70%;
-    height: 30%;
-    padding: 10px 30px;
-    color: #d7bb97;
-    text-transform: none;
+  content: attr(data-description);
+  top: 70%;
+  height: 30%;
+  padding: 10px 30px;
+  color: #d7bb97;
+  text-transform: none;
 }
 
-.caption-link:hover::before,
-.caption-link:hover::after {
-    transform: translateX(0);
+.caption-link:hover::before, .caption-link:hover::after {
+  transform: translateX(0);
 }
+
 
 /*конец эффекта*/
 
-.price{
+.price {
   margin-top: 40px;
   text-align: center;
 }
-.price span{
+
+.price span {
   text-transform: none;
 }
-.wrap-btn{
+
+.wrap-btn {
   margin-top: 30px;
   text-align: center;
 }
-.btn-buy{
+
+.btn-buy {
   width: 55%;
   margin: 0 auto;
 }
-.btn-buy a{
+
+.btn-buy a {
   display: block;
   padding: 12px 0;
   font-size: 1.2em;
@@ -360,35 +405,44 @@ header{
   border-radius: 5px;
   transition: all 300ms;
 }
-.btn-buy a:hover{
+
+.btn-buy a:hover {
   background: #a0f6d5;
   color: #fff;
   border: 2px solid #6cdab0;
   box-shadow: 0 3px 3px 2px rgba(0, 0, 0, .3);
 }
-.btn-buy a:active{
+
+.btn-buy a:active {
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
   border: 2px solid #60c29c;
 }
+
+
 /*<------------------------------------------------------------------------>*/
-.feedback{
+
+.feedback {
   min-height: 500px;
 }
-.feedback-title{
+
+.feedback-title {
   margin: 0 auto;
   margin-top: 80px;
   max-width: 60%;
   padding: 15px 10px 5px;
   text-align: center;
-  border-bottom: 2px solid #a0f6d5;;
+  border-bottom: 2px solid #a0f6d5;
+  ;
   background-image: linear-gradient(#ffffff, #dddddd, #ffffff);
 }
-.feedback-title p{
+
+.feedback-title p {
   font-size: 1.5em;
   line-height: 1.2em;
   text-transform: none;
 }
-.form-feedback-title{
+
+.form-feedback-title {
   text-align: center;
   padding-top: 35px;
   padding-bottom: 35px;
@@ -397,13 +451,16 @@ header{
   color: #486791;
   text-transform: none;
 }
-.form-feedback-title-active{
+
+.form-feedback-title-active {
   display: none;
 }
-.open-form-feedback{
+
+.open-form-feedback {
   display: none;
 }
-.open-form-feedback-active{
+
+.open-form-feedback-active {
   display: block;
   max-width: 80%;
   margin: 100px auto 0;
@@ -421,7 +478,8 @@ header{
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
-@keyframes  move_form {
+
+@keyframes move_form {
   0% {
     opacity: 0;
   }
@@ -429,38 +487,50 @@ header{
     opacity: 1;
   }
 }
+
 .open-form-feedback:hover {
   text-decoration: none;
   box-shadow: 0 0 7px 3px rgba(0, 0, 0, .3);
 }
-.open-form-feedback:active{
+
+.open-form-feedback:active {
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
   border: 2px solid #60c29c;
 }
-.open-form-feedback:visited,
-.open-form-feedback:focus{
+
+.open-form-feedback:visited, .open-form-feedback:focus {
   text-decoration: none;
 }
-.feedback-form{
+
+.feedback-form {
   max-width: 90%;
   margin: 0 auto;
 }
-.feedback-form textarea{
+
+.feedback-form textarea {
   width: 100%;
   padding: 10px;
 }
-.input-name {
+
+.input-text {
   width: 100%;
   height: 60px;
   margin-bottom: 30px;
   padding: 10px;
 }
-.btn-feedback-center{
+
+input::placeholder {
+  color: #7e7e7e;
+  font-weight: normal;
+}
+
+.btn-feedback-center {
   margin-top: 50px;
   text-align: center;
   margin-bottom: 50px;
 }
-.btn-feedback-center button{
+
+.btn-feedback-center button {
   width: 45%;
   padding: 20px 0;
   font-size: 1.2em;
@@ -471,27 +541,32 @@ header{
   background-color: #ffffff;
   transition: all 300ms;
 }
-.btn-feedback-center button:hover{
+
+.btn-feedback-center button:hover {
   background: #a0f6d5;
   color: #fff;
   border: 2px solid #6cdab0;
   box-shadow: 0 3px 3px 2px rgba(0, 0, 0, .3);
 }
-.btn-feedback-center button:active{
+
+.btn-feedback-center button:active {
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
   border: 2px solid #60c29c;
   outline: none;
 }
-.feedback-form p{
+
+.feedback-form p {
   margin-left: 30px;
   font-size: 1em;
   color: #bebebe;
   text-transform: none;
 }
-.form-feedback-row:first-child{
+
+.form-feedback-row:first-child {
   margin-top: 10px;
 }
-.wrap-form{
+
+.wrap-form {
   position: relative;
   width: 90%;
   margin: 90px auto;
@@ -502,7 +577,8 @@ header{
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
-@keyframes  move_form_down {
+
+@keyframes move_form_down {
   0% {
     opacity: 0;
   }
@@ -510,81 +586,96 @@ header{
     opacity: 1;
   }
 }
-.wrap-form-active{
+
+.wrap-form-active {
   display: none;
 }
-.wrap-form > a{
+
+.wrap-form>a {
   position: absolute;
   right: 15px;
   top: 10px;
   font-size: 2em;
   color: #6cdab0;
 }
-.wrap-form > a:hover{
-  color:#32c68d;
+
+.wrap-form>a:hover {
+  color: #32c68d;
 }
-.reviews > p{
+
+.reviews>p {
   font-size: 1em;
   color: #bebebe;
   text-transform: none;
 }
-.reviews-item{
+
+.reviews-item {
   margin: 50px 0;
   padding-left: 30px;
   min-height: 150px;
   text-transform: none;
   border-left: 3px solid #78ACF3;
 }
-.reviews-item p{
+
+.reviews-item p {
   margin-bottom: 20px;
 }
-.reviews-item span{
+
+.reviews-item span {
   font-style: italic;
 }
-.reviews-item-title{
+
+.reviews-item-title {
   font-weight: bold;
   font-size: 1.5em;
 }
-footer{
+
+footer {
   min-height: 170px;
   background-color: #302683;
-  background-image: repeating-linear-gradient(150deg,rgba(255,255,255,.06),rgba(255,255,255,.06) 1px,transparent 0,transparent 41px),repeating-linear-gradient(-150deg,rgba(255,255,255,.06),rgba(255,255,255,.06) 1px,transparent 0,transparent 41px);
+  background-image: repeating-linear-gradient(150deg, rgba(255, 255, 255, .06), rgba(255, 255, 255, .06) 1px, transparent 0, transparent 41px), repeating-linear-gradient(-150deg, rgba(255, 255, 255, .06), rgba(255, 255, 255, .06) 1px, transparent 0, transparent 41px);
   background-size: 82px 47px;
-  /*box-shadow: 0 0 15px 10px #302683;*/
 }
-footer hr{
-margin: 0;
+
+footer hr {
+  margin: 0;
 }
-footer .logo-footer{
- margin: 50px 0;
+
+.logo-footer {
+  display: block;
+  margin: 50px 0;
 }
-.copywrite{
+
+.copywrite {
   padding: 25px 0 35px 0;
   text-align: center;
   text-transform: none;
   font-size: 1em;
 }
-.social{
+
+.social {
+  padding-top: 40px;
   text-align: right;
   text-transform: none;
   color: #ffffff;
 }
-.social-share,
-.social-title{
+
+.social-share, .social-title {
   margin-top: 20px;
 }
 
+
 /*------------inside-shoes--------------*/
 
-.specification{
+.specification {
   margin-bottom: 60px;
 }
-.specification li,
-.specification p,
-.specification span{
+
+.specification li, .specification p, .specification span {
   text-transform: none;
 }
-.active-menu{
+
+.active-menu {
   position: relative;
   padding: 20px 15px;
   box-shadow: inset 0 0 10px;
@@ -592,68 +683,94 @@ footer .logo-footer{
   background-color: #fff;
   cursor: pointer;
 }
-.header-inner{
+
+.header-inner {
   margin-bottom: 25px;
 }
-.foto{
+
+.foto {
   margin-top: 30px;
 }
-.foto-min{
+
+.foto-min {
   padding-bottom: 10px;
   border-bottom: 3px solid rgba(120, 172, 248, .7);
 }
-.big-foto{
+
+.big-foto {
   width: 55%;
   margin: 35px auto;
   border: 1px solid #ccc;
   box-shadow: 0 0 15px;
   overflow: hidden;
 }
-.foto-img{
+
+.foto-img {
   transition: all 300ms;
 }
-.foto-a:hover .foto-img{
-    transform: scale(1.1);
+
+.foto-a:hover .foto-img {
+  transform: scale(1.1);
 }
-.breadcrumb{
+
+.breadcrumb {
   text-transform: none;
   background: #fff;
 }
-.name-section-inner{
+
+.name-section-inner {
   margin-top: 40px;
 }
-.price-inner{
+
+.price-inner {
   padding-left: 10px;
   border-left: 5px solid orange;
   font-weight: bold;
 }
-.assortment-inner{
+
+.assortment-inner {
   margin-bottom: 100px;
 }
 
+
 /*sale*/
 
-.active-menu-sale{
+.active-menu-sale {
   box-shadow: inset 0 0 10px;
   border-radius: 5px;
   background-color: #fff;
 }
-.active-menu-sale a{
+
+.active-menu-sale a {
   cursor: not-allowed;
 }
-.navbar-default .menu > .active-menu-sale a:hover{
+
+.navbar-default .menu>.active-menu-sale a:hover {
   box-shadow: inset 0 0 10px;
   border-radius: 5px;
   background-color: #fff;
   color: #777;
 }
-.delivery{
+
+.delivery {
   margin-top: 100px;
 }
-.title-page-send{
+
+.title-page-send {
   text-align: center;
   background-color: #ffd27f;
 }
-.assortment-message{
+
+.assortment-message {
   margin: 100px auto;
+}
+
+.input-wrapper label {
+  width: 100%;
+}
+
+.input-name {
+  text-transform: none;
+  font-weight: normal;
+  color: #646464;
 }
